# easy-cursor-swap

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  SUPPORT.md  implementation_plan.md  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: key_rotation.md
.github/workflows/: ci.yml  marketplace-validate.yml  performance.yml  release.yml
app/: CLAUDE.md  app.vue
app/assets/css/: global.css  tailwind.css
app/components/creator/: AniThumb.vue  BulkImportButton.vue  BulkImportPreviewModal.vue  BulkImportRoleRow.vue  CreatorEditorCanvas.vue  CreatorMetadataPane.vue  CreatorPropertiesPane.vue  CreatorRoleList.vue  CreatorStartScreen.vue  CreatorToolbar.vue  DiscardEditDialog.vue  NewThemeStartModal.vue  RoleListItem.vue  SaveDestinationModal.vue  SizeStrip.vue
app/components/icons/: CursorIcon.vue  CursorIcons.ts  UiIcon.vue  UiIcons.ts
app/components/marketplace/: FeaturedCard.vue  MarketplaceCard.vue  MarketplaceDetailModal.vue  SubmitDeviceFlowModal.vue  SubmitThemeAutoForm.vue  SubmitThemeDialog.vue  SubmitThemeManualForm.vue
app/components/panic/: PanicFlow.vue
app/components/preview/: CursorPreview.vue
app/components/settings/: AboutSection.vue  ConfigRecoveryPanel.vue  GeneralSection.vue  KeysSection.vue  LibrarySection.vue  LoggingSection.vue  ModeIndicator.vue  OssLicenseModal.vue  PairingSlot.vue  PassphrasePrompt.vue  SecuritySection.vue  SettingsRow.vue  SettingsSearchDropdown.vue  SettingsToggle.vue  StartupSection.vue  UpdatesSection.vue
app/components/shell/: AppSidebar.vue  AppStatusbar.vue  AppTitlebar.vue  EnvironmentBanner.vue
app/components/ui/: UiAlert.vue  UiButton.vue  UiConfirmDialog.vue  UiModal.vue  UiSelect.vue
app/composables/: pickLocalizedName.ts  sanitizeSvg.ts  useAniPlayer.ts  useAppConfig.ts  useAppInfo.ts  useAppSettings.ts  useBulkImport.ts  useBulkImportPreviewState.ts  useCreatorAssets.ts  useCreatorBulkImportFlow.ts  useCreatorExport.ts  useCreatorImport.ts  useCreatorMetaState.ts  useCreatorPickers.ts  useCursorpackOpener.ts  useExternalUrl.ts  useFocusTrap.ts  useGithubAuth.ts  useHotspotDefaults.ts  useHotspotInteraction.ts  useI18n.ts  useKeystore.ts  useListbox.ts  useMarketplacePreviews.ts  useMarketplaceSubmit.ts  useModalLifecycle.ts  useNotify.ts  usePngBlobCache.ts  useRoleMatcher.ts  useSettingsSearch.ts  useTagChipInput.ts  useTauri.ts  useThemeCardState.ts  useThemePreviews.ts  useThemes.ts  useUiTheme.ts  useUpdater.ts  useUpdaterBootstrap.ts
app/composables/__tests__/: pickLocalizedName.test.ts  sanitizeSvg.test.ts  settingsSearch.test.ts  useAniPlayer.test.ts  useCreatorAssets.test.ts  useCreatorBulkImportFlow.test.ts  useCreatorMetaState.test.ts  useCursorpackOpener.test.ts  useFocusTrap.test.ts  useGithubAuth.test.ts  useHotspotDefaults.test.ts  useHotspotInteraction.test.ts  useI18n.test.ts  useMarketplacePreviews.test.ts  useMarketplaceSubmit.test.ts  useModalLifecycle.test.ts  usePngBlobCache.test.ts  useRoleMatcher.test.ts  useThemes.test.ts  useUpdater.classifyError.test.ts  useUpdaterBootstrap.test.ts
app/layouts/: default.vue
app/locales/: en.ts  ja.ts
app/pages/: appearance.vue  creator.vue  index.helpers.ts  index.vue  marketplace.helpers.ts  marketplace.vue  settings.vue
app/pages/__tests__/: creator-status.test.ts  creator.test.ts  index.source-mapping.test.ts  marketplace.dedupe.test.ts
app/plugins/: clickOutside.client.ts
app/types/: config.ts  githubAuth.ts  marketplace.ts  theme.ts
distribution/msix/: AppxManifest.xml
docs/: 01_specification.md  02_architecture_and_core.md  03_security_and_ecosystem.md  04_implementation_guide.md  architecture.html  architecture.json  architecture.md  authenticode_signing.md  author_registration.md  code_signing.md  code_signing_policy.md  cursor_size_architecture.md  development_specification.md  distribution.md  file_inventory.md  first_plan.md  implementation_plan.md  key_rotation.md  release_procedure.md  signing.md  ui_map.html  ui_map.json  updater_signing.md
scripts/: check-i18n.mjs  check-updater-keypair.mjs  embed-arch-json.mjs  generate-icon.mjs  hook-post-edit.sh  hook-pre-tool.sh  hook-session-start.sh  verify-gate-backend.sh  verify-gate-frontend.sh  verify-gate.sh
scripts/marketplace/: malware-hashes.txt  validate.mjs
scripts/release/: extract-changelog-section.mjs  patch-latest-json.mjs
services/crash-report-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
services/crash-report-worker/scripts/: predeploy-check.ps1  (+1 more)
src-tauri/: CLAUDE.md  Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
src-tauri/benches/: cursor_build.rs  startup.rs
src-tauri/capabilities/: default.json  dev.json
src-tauri/icons/: icon.icns
src-tauri/signing/: cursorforge.pub
src-tauri/src/: accessibility.rs  appusermodel.rs  autostart.rs  backup.rs  bulk_import.rs  cancel_registry.rs  commands.rs  config.rs  crash.rs  cursor.rs  cursor_watcher.rs  darkmode.rs  environment.rs  errors.rs  health.rs  hotkey.rs  keystore.rs  lib.rs  logging.rs  main.rs  marketplace.rs  registry.rs  rollback.rs  single_instance.rs  theme.rs  tray.rs
src-tauri/src/bulk_import/: assets.rs  cursorpack.rs  mod.rs
src-tauri/src/commands/: ani_export.rs  cursor_build.rs  cursor_io.rs  keystore.rs  marketplace.rs  marketplace_submit.rs  mod.rs  profile.rs  system.rs  theme.rs  updater.rs  windows_scheme.rs
src-tauri/src/commands/cursor_build/: build.rs  cancel.rs  dto.rs  mod.rs  sign.rs  stream.rs
src-tauri/src/cursor/: ani.rs  ani_write.rs  cur_build.rs  ico_cur.rs  image.rs  mod.rs
src-tauri/src/github/: client.rs  device_flow.rs  mod.rs  types.rs
src-tauri/src/registry/: env.rs  mod.rs  roles.rs  scheme.rs
src-tauri/src/theme/: apply.rs  listing.rs  mod.rs  package.rs  preview.rs  sanitize.rs  types.rs
src-tauri/wix/: ja-JP.wxl
(+23 files in other folders)
