[package]
name = "easy-cursor-swap"
version = "0.0.2"
description = "Windows 用マウスカーソルテーマ管理ツール"
authors = ["nishiuriraku"]
license = "MIT"
repository = "https://github.com/nishiuriraku/easy-cursor-swap"
homepage = "https://github.com/nishiuriraku/easy-cursor-swap"
edition = "2021"
rust-version = "1.82.0"
# `src/bin/sign_for_marketplace.rs` が追加されて bin ターゲットが 2 個になった結果、
# `cargo run` (= `tauri dev` が打つコマンド) が「どちらを起動するか」決められず失敗する。
# 通常起動はメインアプリなので default-run で固定する。CLI を起動したいときは
# `cargo run --bin sign_for_marketplace -- ...` を明示する。
default-run = "easy-cursor-swap"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# `npm run tauri:dev` 時のみ `--features devtools` 経由で有効化される。
# release ビルド (`tauri build`) では渡されないため、配布バイナリには
# WebView2 DevTools 関連コードが一切リンクされない (バイナリサイズ削減 +
# 署名済み配布物の Inspect 経路封印)。
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
# build.rs でリポジトリルートの .env からビルド時 env を読み込むため。
# CI では .env を置かず GitHub Actions の env で渡されるので、これは
# あくまでローカル開発の利便性向上が目的。
dotenvy = "0.15"

[dependencies]
# --- Tauri コア ---
tauri = { version = "2.11.2", features = ["tray-icon"] }
# MCP テスト用プラグイン。crate は常にリンクされるが、main.rs で `cfg(debug_assertions)` で
# 初期化を gate しているので release バイナリでは起動しない (capabilities の permission 解決
# は build 時に行われるため、crate を optional 化すると default features ビルドで permission
# 未解決エラーになる)。
tauri-plugin-mcp-bridge = "0.11"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

# --- シリアライズ ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- ログ ---
# `log` crate は未使用 (本プロジェクトは `tracing` のみ使用)。
# `tauri-plugin-log` も `init()` 呼出が無いので依存から除外済。
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# --- 画像処理 ---
image = { version = "0.25", features = ["png", "ico"] }

# --- Windows API ---
winreg = "0.56"

[target.'cfg(windows)'.dependencies]
# windows 0.62 で `WNDCLASSW` / `RegisterClassW` が `Win32_Graphics_Gdi` feature
# (WNDCLASSW.hbrBackground が HBRUSH を持つため) の背後に gating された。
# `cursor_watcher.rs` / `hotkey.rs` がメッセージ専用 HWND_MESSAGE ウィンドウを
# 作成するために WNDCLASSW を使用しているので、Gdi feature を有効化する。
windows = { version = "0.62", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_Security_Cryptography",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Environment",
  "Win32_Graphics_Gdi",
  "Wdk_System_SystemServices",
] }

# --- ユーティリティ ---
uuid = { version = "1", features = ["v4", "serde"] }
zip = "5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
thiserror = "2"

# --- Phase 9: Marketplace / セキュリティ ---
# rustls 経由で OS のネイティブ TLS スタックを回避し、依存ツリーを軽量化。
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "blocking", "form", "query"] }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
base64 = "0.22"
rand = "0.9"
argon2 = "0.5"
chacha20poly1305 = "0.10"
# 自動ロールバックの DL 後検証で使う。tauri-plugin-updater も内部で同じ crate を
# 使っており、Tauri Updater と完全に互換な signature 検証を行えるため自前で
# ed25519-dalek + base64 をハンドルする実装より安全。
minisign-verify = "0.2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["html_reports"] }
mockito = "1.7"
tempfile = "3"
# `#[tokio::test]` のためだけに必要。本体コード (src/) は同期 + tauri ランタイム
# 経由なので tokio 直接利用はなく、dev-dependencies に閉じる。
tokio = { version = "1", features = ["rt", "macros"] }

[[bench]]
name = "cursor_build"
harness = false

[[bench]]
name = "startup"
harness = false

[profile.release]
# リリースビルドの最適化
strip = true        # デバッグシンボルを除去
lto = true          # リンク時最適化で実行ファイルを小さく
codegen-units = 1   # シングルCGUでより積極的な最適化
opt-level = "s"     # サイズ最適化
